--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 let doIt=()=>{
   let tab=document.getElementById("tab1");
   let rows=tab1.getElementsByTagName('tr');
-  fetch('https://dspaul.dbsprojects.ie:8080/')
+  fetch('/')
     .then(response => response.json())
     .then(data=>data.Results.forEach(  //.slice(0,3)
       x=>{
